# Fancy-Ai1

./: .descriptions.xml  .gitignore  AGENTS.md  Bugs.md  CLAUDE.md  LICENSE  MIGRATION.md  NOTICE  README.md  RELEASE_NOTES.md  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml  apkyap.yml  build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/mrj/fancyai/: ExampleInstrumentedTest.java  ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html
app/src/main/assets/js/apps/: contacts.js  gallery.js  games.js  imaging.js  messenger.js  rebbit.js  settings.js  ustagram.js  y.js
app/src/main/assets/js/core/: api.js  db.js  state.js
app/src/main/assets/models/: config.json  llm_config.json
app/src/main/cpp/: CMakeLists.txt  jni.cpp
app/src/main/cpp/llama.cpp/ggml/src/ggml-hexagon/: CMakeLists.txt
app/src/main/cpp/llama.cpp/ggml/src/ggml-hexagon/htp/: CMakeLists.txt
app/src/main/cpp/llama.cpp/ggml/src/ggml-vulkan/: CMakeLists.txt  ggml-vulkan.cpp
app/src/main/java/com/mrj/fancyai/: AutonomousWorker.java  FancyAiForegroundService.java  FancyAiForegroundService.kt  LlamaInference.kt  MainActivity.java  MainActivity.kt  ModelManager.kt
app/src/main/java/com/mrj/fancyai/data/db/: AppDatabase.kt
app/src/main/java/com/mrj/fancyai/data/db/dao/: CharacterDao.kt  DossierDao.kt  MemoryDao.kt  MessageDao.kt  SocialCommentDao.kt  SocialPostDao.kt
app/src/main/java/com/mrj/fancyai/data/db/entity/: CharacterEntity.kt  DossierEntity.kt  MemoryEntity.kt  MessageEntity.kt  SocialCommentEntity.kt  SocialPostEntity.kt
app/src/main/java/com/mrj/fancyai/data/migration/: LegacyStateMigrator.kt
app/src/main/java/com/mrj/fancyai/data/model/: AppConfig.kt
app/src/main/java/com/mrj/fancyai/data/repository/: CharacterRepository.kt  ChatRepository.kt  MediaRepository.kt  MessengerRepository.kt  SettingsRepository.kt  SocialRepository.kt  StateRepository.kt
app/src/main/java/com/mrj/fancyai/data/seed/: DatabaseSeeder.kt
app/src/main/java/com/mrj/fancyai/di/: AppModule.kt  ServiceLocator.kt  ServiceRegistry.kt  ViewModelFactory.kt
app/src/main/java/com/mrj/fancyai/domain/inference/: ChatTemplate.kt  LlamaEngine.kt  ModelLoader.kt  PromptBuilder.kt
app/src/main/java/com/mrj/fancyai/service/: AgentService.kt  AutoGenerationService.kt  BackupService.kt  CloudLlmService.kt  ImageService.kt  SocialDefaults.kt  SocialScheduler.kt  SocialWorker.kt  VisionService.kt  VoiceService.kt
app/src/main/java/com/mrj/fancyai/ui/characters/: CharacterViewModel.kt  CharactersScreen.kt
app/src/main/java/com/mrj/fancyai/ui/chat/: ChatScreen.kt  ChatViewModel.kt  MessengerScreen.kt  MessengerViewModel.kt
app/src/main/java/com/mrj/fancyai/ui/components/: ImageLightbox.kt  MarkdownText.kt
app/src/main/java/com/mrj/fancyai/ui/gallery/: GalleryScreen.kt  GalleryViewModel.kt
app/src/main/java/com/mrj/fancyai/ui/games/: GamesScreen.kt  GamesViewModel.kt
app/src/main/java/com/mrj/fancyai/ui/imaging/: ImagingScreen.kt  ImagingViewModel.kt
app/src/main/java/com/mrj/fancyai/ui/navigation/: NavGraph.kt
app/src/main/java/com/mrj/fancyai/ui/phone/: PhoneContactsViewModel.kt  PhoneScreen.kt  PhoneViewModel.kt
app/src/main/java/com/mrj/fancyai/ui/screen/: CharactersScreen.kt  ChatScreen.kt  HomeScreen.kt  SettingsScreen.kt
app/src/main/java/com/mrj/fancyai/ui/settings/: SettingsScreen.kt  SettingsViewModel.kt
app/src/main/java/com/mrj/fancyai/ui/social/: SocialScreen.kt  SocialViewModel.kt
app/src/main/java/com/mrj/fancyai/ui/theme/: Color.kt  Theme.kt  Typography.kt
app/src/main/java/com/mrj/fancyai/util/: CharacterCardParser.kt  MediaActions.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/mrj/fancyai/: ExampleUnitTest.java  ExampleUnitTest.kt
docs/: index.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
